--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,18 +11,68 @@
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
-        android:layout_width="56dp"
-        android:layout_height="16dp"
-        android:layout_centerInParent="true"
+        android:layout_width="82dp"
+        android:layout_height="59dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="gone" />
 
-</android.support.constraint.ConstraintLayout>
+
+        <EditText
+            android:id="@+id/email_tv"
+            android:layout_width="227dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:hint="@string/email"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="141dp"
+            android:ems="10"
+            android:inputType="textEmailAddress" />
+
+
+
+
+
+
+        <EditText
+            android:id="@+id/password_pt"
+            android:layout_width="226dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:hint="@string/password"
+            android:layout_marginTop="198dp"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/ep_signin_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners"
+            android:padding="2dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/action_sign_in_short" />
+
+        <Button
+            android:id="@+id/siginup_btn"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners"
+            android:padding="2dp"
+            android:text="@string/action_sign_up" />
+    </LinearLayout>
+
+
+</RelativeLayout>
