--- a/app/src/main/res/layout/journal_entry_layout.xml
+++ b/app/src/main/res/layout/journal_entry_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,50 @@
     tools:layout_editor_absoluteY="81dp">
 
     <!--
-     android:id="@+id/title_tv"
-     android:id="@+id/description_tv"
-      android:id="@+id/date_tv"
+
+     a
+
     -->
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/title_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            tools:text="My First Entry" />
+
+        <TextView
+            android:id="@+id/date_tv"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
+            android:textSize="24sp"
+            tools:text="29/06/2018" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="46dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/description_tv"
+            android:layout_width="410dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="0dp"
+            android:textSize="24sp"
+            tools:text="Here lies my first entry" />
+
+    </LinearLayout>
+
+</RelativeLayout>
