--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
-        android:width="1dp"
-        android:color="@color/common_border_color" />
+        android:width="5dp"
+        android:color="#fff" />
 
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/colorAccent" />
 
     <padding
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
 
-    <corners android:radius="5dp" />
+    <corners android:radius="20dp" />
 </shape>
