--- a/app/src/main/res/layout/activity_journal.xml
+++ b/app/src/main/res/layout/activity_journal.xml
@@ -17,6 +17,7 @@
             android:id="@+id/edit_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:inputType="text"
             android:hint="@string/title_hint" />
 
@@ -31,6 +32,10 @@
             android:id="@+id/edit_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="false"
+            android:maxLines="6"
+            android:textSize="18sp"
+            android:lines="4"
             android:hint="@string/description_hint"
             android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
