--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#cb959d</color>
-    <color name="colorPrimaryDark">#b76e79</color>
-    <color name="colorAccent">#83404a</color>
-<color name="background_color">#bea2a6</color>
+    <color name="colorPrimary">#1e90ff</color>
+    <color name="colorPrimaryDark">#0483ff</color>
+    <color name="colorAccent">#ff4500</color>
+
     <color name="common_border_color">#26b0da</color>
 </resources>
