--- a/app/src/main/res/drawable/rounded_buttons.xml
+++ b/app/src/main/res/drawable/rounded_buttons.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <stroke
-        android:width="5dp"
-        android:color="#fff" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#fff" />
+    <solid android:color="@color/colorAccent" />
 
     <padding
         android:left="1dp"
