--- a/app/src/main/res/layout-land/content_main2.xml
+++ b/app/src/main/res/layout-land/content_main2.xml
@@ -11,8 +11,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewEntries"
         android:background="@drawable/item_selected"
-        android:layout_width="395dp"
-        android:layout_height="587dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
